@@ -5,6 +5,7 @@ Revision history for cif-smrt-perl v1.
     - changed the default throttle factor to 4 (default is 4 threads per cpu core)
     - enabled specific-class postprocessor enabling (eg: -p fqdn,ip)
     - better error message handling between threads
+    - cleaned up carbon copy postprocessor
 
 0.99.02 2012-07-31
     - zmq support
